unpackaged/main/default/objects/PF_Survey__c/PF_Survey__c.object-meta.xml
<CustomObject>
    <label>PF Survey</label>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>PF Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PF Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>