unpackaged/main/default/objects/PF_Survey__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>