unpackaged/main/default/objects/PF_Survey__c/fields/Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Coefficient__c</fullName>
    <label>Coefficient</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>