unpackaged/main/default/objects/PF_Survey__c/fields/Graph__c.field-meta.xml
<CustomField>
    <fullName>Graph__c</fullName>
    <label>Graph</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>