unpackaged/main/default/objects/PF_Survey__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Account_Plant__c</referenceTo>
    <relationshipLabel>PF Surveys</relationshipLabel>
    <relationshipName>PF_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>