unpackaged/main/default/objects/PF_Survey__c/fields/Synced_By__c.field-meta.xml
<CustomField>
    <fullName>Synced_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Synced By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PF_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>