unpackaged/main/default/objects/PF_Survey__c/fields/Synced_On__c.field-meta.xml
<CustomField>
    <fullName>Synced_On__c</fullName>
    <label>Synced On</label>
    <type>DateTime</type>
</CustomField>