unpackaged/main/default/objects/PF_Survey__c/fields/Validation__c.field-meta.xml
<CustomField>
    <fullName>Validation__c</fullName>
    <label>Validation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>