unpackaged/main/default/objects/PF_Survey__c/fields/View_Report__c.field-meta.xml
<CustomField>
    <fullName>View_Report__c</fullName>
    <label>View Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>